--- a/.classpath
+++ b/.classpath
@@ -46,7 +46,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Miguel/Desktop/Workspace-22.0/Projects/Acme-Toolkits/reports/Deliverable 04/SpamChecker.jar">
+	<classpathentry kind="lib" path="reports/Deliverable 04/SpamChecker.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
